# FastShop

./: .clang-format  .gitignore  readme.MD  todo.MD
.nvim/: nvim-dap.lua
backend/: CMakeLists.txt  build.sh  run.sh
backend/asset/json/product/: product.json  products.json
backend/lib/json/include/: json_node.h  parser.h  serializable.h  tokenizer.h
backend/lib/json/src/: json_node.cpp  parser.cpp  tokenizer.cpp
backend/src/: Main.cpp
backend/src/http/: http_common.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  http_tcp-server_linux.cpp  http_tcp-server_linux.h
backend/src/log/: log.cpp  log.h  log_handler_console.cpp  log_handler_console.h  log_handler_interface.h
backend/src/logging/: log.cpp  log.h  log_handler_console.h
backend/src/service/: database.cpp  database.h  orm.h  registry.cpp  registry.h
backend/src/shop/controller/: admin_controller.cpp  admin_controller.h  base_controller.cpp  base_controller.h  category_controller.cpp  category_controller.h  product_controller.cpp  product_controller.h  user_controller.cpp  user_controller.h
backend/src/shop/model/: product.cpp  product.h  product_list.cpp  product_list.h
backend/src/shop/router/: controller.h  router.cpp  router.h  routes.cpp  routes.h
